--- a/evstations.ipynb
+++ b/evstations.ipynb
@@ -224,6 +224,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from sqlalchemy import create_engine\n",
     "\n",
     "#Reading in data\n",
@@ -2249,8 +2250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Data visualization\n",
-    "import seaborn as sns"
+    "#Data visualization"
    ]
   },
   {
@@ -2272,6 +2272,7 @@
     }
    ],
    "source": [
+    "#Seeing which state has the most charging stations\n",
     "state_count = stations.state.value_counts()\n",
     "indx_state = state_count.index\n",
     "\n",
@@ -2291,6 +2292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Seeing which city has the most charging stations\n",
     "city_count = stations.city.value_counts()\n",
     "indx_city = city_count.index\n",
     "\n",
@@ -2309,7 +2311,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Seeing progression of station openings per year\n",
+    "yr_count = stations.open_year.value_counts()\n",
+    "indx_yr = yr_count.index\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.bar(indx_yr, yr_count)\n",
+    "plt.title()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Seeing connector types throughout different areas\n",
+    "#stations.CHADEMO.value_counts()\n",
+    "#stations.J1772.value_counts()\n",
+    "#stations.J1772COMBO.value_counts()\n",
+    "#stations.NEMA1450.value_counts()\n",
+    "#stations.NEMA515.value_counts()\n",
+    "#stations.NEMA520.value_counts()\n",
+    "#stations.TESLA.value_counts()\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.bar()\n",
+    "plt.title()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -2328,7 +2360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (default, Sep 16 2021, 16:59:28) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
