--- a/evstations.ipynb
+++ b/evstations.ipynb
@@ -2255,7 +2255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2281,7 @@
     }
    ],
    "source": [
-    "#Seeing which state has the most charging stations\n",
+    "#Finding the total number of charging stations in each state\n",
     "state_count = stations.state.value_counts()\n",
     "indx_state = state_count.index\n",
     "\n",
@@ -2282,38 +2291,13 @@
     "plt.ylabel('No. of Charging Stations')\n",
     "plt.xticks(rotation='vertical')\n",
     "plt.title('Total Number of EV Charging Stations in Each State')\n",
-    "#plt.savefig('Resources/Images/...')\n",
+    "plt.savefig('Resources/Images/evstation_plt01')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Los Angeles    1399\n",
-       "San Diego       674\n",
-       "Atlanta         633\n",
-       "San Jose        571\n",
-       "Irvine          571\n",
-       "Name: city, dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stations.city.value_counts().head(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2314,7 @@
     }
    ],
    "source": [
-    "#Seeing the top 50 cities with the most charging stations\n",
+    "#Finding the total amount of charging stations in the top 50 cities\n",
     "city_count = stations.city.value_counts().head(50)\n",
     "indx_city = city_count.index\n",
     "\n",
@@ -2340,13 +2324,13 @@
     "plt.ylabel('No. of Charging Stations')\n",
     "plt.xticks(rotation='vertical')\n",
     "plt.title('Total Number of EV Charging Stations in Each City')\n",
-    "#plt.savefig('Resources/Images/...')\n",
+    "plt.savefig('Resources/Images/evstation_plt02')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2347,7 @@
     }
    ],
    "source": [
-    "#Seeing progression of station openings per year\n",
+    "#Seeing progression of charging station openings per year\n",
     "yr_count = stations.open_year.value_counts(sort=False).sort_index()\n",
     "indx_yr = yr_count.index\n",
     "\n",
@@ -2373,6 +2357,7 @@
     "plt.ylabel('No. of Charging Stations Opened')\n",
     "plt.xticks(rotation='vertical')\n",
     "plt.title('EV Charging Stations Opened per Year')\n",
+    "plt.savefig('Resources/Images/evstation_plt03')\n",
     "plt.show()"
    ]
   },
@@ -2405,7 +2390,10 @@
     }
    ],
    "source": [
-    "sns.barplot(x=indx_yr, y=yr_count)"
+    "ax = sns.barplot(x=indx_yr, y=yr_count)\n",
+    "ax.bar_label(ax.containers[0])\n",
+    "plt.xticks(rotation='vertical')\n",
+    "plt.show()"
    ]
   },
   {
