updating script and plots

--- a/evstations.ipynb
+++ b/evstations.ipynb
@@ -2224,7 +2224,17 @@
     "engine = create_engine('sqlite:///Resources/evstations.sqlite', echo=False)\n",
     "\n",
     "#Exporting results to sqlite\n",
-    "stations.to_sql(name='evstations', con=engine, if_exists='replace', index=True)"
+    "stations.to_sql(name='evstations', con=engine, if_exists='replace', index=True)\n",
+    "\n",
+    "#Creating engine to postgres\n",
+    "connection_string = 'postgres:postgres@localhost:5432/evstations_db'\n",
+    "engine_postgres = create_engine(f'postgresql://{connection_string}')\n",
+    "\n",
+    "#Load DataFrames into database\n",
+    "#stations.to_sql(name='evstations', con=engine_postgres, if_exists='append', index=True)\n",
+    "\n",
+    "#Check to confirm data has been loaded properly to table and db\n",
+    "#pd.read_sql_query('select * from evstations', con=engine_postgres).head()"
    ]
   },
   {
@@ -2242,20 +2252,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Data visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2327,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2400,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2442,98 +2445,8 @@
     "plt.xlabel('Connector Type')\n",
     "plt.ylabel('No. of Stations with Connector')\n",
     "plt.title('New York State Connector Types')\n",
-    "#plt.savefig('Resources/Images/evstation_plt05.png')\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>conn_type</th>\n",
-       "      <th>total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CHADEMO</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>J1772</td>\n",
-       "      <td>2610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>J1772COMBO</td>\n",
-       "      <td>129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NEMA1450</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NEMA515</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>NEMA520</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>543</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    conn_type  total\n",
-       "0     CHADEMO    120\n",
-       "1       J1772   2610\n",
-       "2  J1772COMBO    129\n",
-       "3    NEMA1450      4\n",
-       "4     NEMA515     12\n",
-       "5     NEMA520     10\n",
-       "6       TESLA    543"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_nyconn"
+    "plt.savefig('Resources/Images/evstation_plt05.png')\n",
+    "plt.show()"
    ]
   },
   {
@@ -2625,26 +2538,6 @@
    "source": [
     "testny = df_nyconn.sort_values(by='total', ascending=False)\n",
     "testny"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Finding total number of connector types in a given area\n",
-    "\n",
-    "#plt.figure(figsize = (16, 8))\n",
-    "\n",
-    "#ax = sns.barplot(x=connindx, y=conndata, errwidth=0, palette='crest')\n",
-    "#ax.bar_label(ax.containers[0], padding=2)\n",
-    "\n",
-    "#plt.xlabel('')\n",
-    "#plt.ylabel('')\n",
-    "#plt.title('')\n",
-    "#plt.savefig('Resources/Images/evstation_plt05.png')\n",
-    "#plt.show()"
    ]
   }
  ],
